--- a/progconcurrente/tutoriales/erlang/documentos/EjemplosTutorialErlang.ipynb
+++ b/progconcurrente/tutoriales/erlang/documentos/EjemplosTutorialErlang.ipynb
@@ -164,7 +164,7 @@
         "    Current < N ->\n",
         "      count_up(N, Current + 1);\n",
         "    true ->\n",
-        "      io:format(\"A finalizado el Contador ascendente~n\")\n",
+        "      io:format(\"Ha finalizado el Contador ascendente~n\")\n",
         "  end.\n",
         "\n",
         "count_down(N, Current) ->\n",
@@ -173,7 +173,7 @@
         "    Current > 1 ->\n",
         "      count_down(N, Current - 1);\n",
         "    true ->\n",
-        "      io:format(\"A finalizado el Contador descendiente~n\")\n",
+        "      io:format(\"Ha finalizado el Contador descendiente~n\")\n",
         "  end.\n",
         "\n",
         "start() ->\n",
@@ -226,7 +226,7 @@
             "Contador 1: 8\n",
             "Contador 1: 9\n",
             "Contador 1: 10\n",
-            "A finalizado el Contador ascendente\n",
+            "Ha finalizado el Contador ascendente\n",
             "Contador 2: 10\n",
             "Contador 2: 9\n",
             "Contador 2: 8\n",
@@ -237,7 +237,7 @@
             "Contador 2: 3\n",
             "Contador 2: 2\n",
             "Contador 2: 1\n",
-            "A finalizado el Contador descendiente\n"
+            "Ha finalizado el Contador descendiente\n"
           ]
         }
       ]
@@ -260,7 +260,7 @@
         "    Current < N ->\n",
         "      count_up(N, Current + 1);\n",
         "    true ->\n",
-        "      io:format(\"A finalizado el Contador ascendente~n\")\n",
+        "      io:format(\"Ha finalizado el Contador ascendente~n\")\n",
         "  end.\n",
         "\n",
         "count_down(N, Current) ->\n",
@@ -269,7 +269,7 @@
         "    Current > 1 ->\n",
         "      count_down(N, Current - 1);\n",
         "    true ->\n",
-        "      io:format(\"A finalizado el Contador descendiente~n\")\n",
+        "      io:format(\"Ha finalizado el Contador descendiente~n\")\n",
         "  end.\n",
         "\n",
         "start() ->\n",
@@ -332,8 +332,8 @@
             "Contador 2: 2\n",
             "Contador 1: 10\n",
             "Contador 2: 1\n",
-            "A finalizado el Contador ascendente\n",
-            "A finalizado el Contador descendiente\n"
+            "Ha finalizado el Contador ascendente\n",
+            "Ha finalizado el Contador descendiente\n"
           ]
         }
       ]
